Created candiate vote_granted
i am doing this backwards...